[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "insta-audience-tool"
version = "0.1.0"
description = "Instagram audience persona analyzer (compliant)"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
]

[tool.setuptools]
packages = ["app", "scripts"]

[tool.setuptools.package-data]
app = ["*.py"]
